k8s/applications/media/arr/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: arr
  labels:
    app: sonarr
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: config
        backup.velero.io/backup-volumes-excludes: media,tmp,run
      labels:
        app: sonarr
    spec:
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-share
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 100Mi
      containers:
        - name: sonarr
          image: ghcr.io/vegops/sonarr:4.0.17.2952-r2@sha256:c1a84eace1d9aace79447e0e53a46d05d697fc261591541bfb9e3c8513c8ae5e
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /sonarr/data
            - name: media
              mountPath: /data
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /run
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 8989
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8989
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "proxmox-csi"
        resources:
          requests:
            storage: 4Gi
