k8s/applications/media/arr/sonarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: arr
spec:
  clusterIP: None
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: sonarr-web
      port: 80
      targetPort: http
